; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_irq_work.c_irq_work_next.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_irq_work.c_irq_work_next.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.irq_work = type { i64 }

@IRQ_WORK_FLAGS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.irq_work* (%struct.irq_work*)* @irq_work_next to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.irq_work* @irq_work_next(%struct.irq_work* %0) #0 {
  %2 = alloca %struct.irq_work*, align 8
  %3 = alloca i64, align 8
  store %struct.irq_work* %0, %struct.irq_work** %2, align 8
  %4 = load %struct.irq_work*, %struct.irq_work** %2, align 8
  %5 = getelementptr inbounds %struct.irq_work, %struct.irq_work* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  store i64 %6, i64* %3, align 8
  %7 = load i64, i64* @IRQ_WORK_FLAGS, align 8
  %8 = xor i64 %7, -1
  %9 = load i64, i64* %3, align 8
  %10 = and i64 %9, %8
  store i64 %10, i64* %3, align 8
  %11 = load i64, i64* %3, align 8
  %12 = inttoptr i64 %11 to %struct.irq_work*
  ret %struct.irq_work* %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
